--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,9 @@ html, body {
 .file {
     display: none;
 }
+
+#openProjectList  .ui-selecting { background: #FECA40; }
+#openProjectList  .ui-selected { background: #F39814; color: white; }
+#openProjectList  { list-style-type: none; margin: 0; padding: 0; width: 60%; }
+#openProjectList  li { margin: 3px; padding: 0.4em; font-size: 1.4em; height: 18px; }
+
