--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,15 @@ html, body {
     display: none;
 }
 
+#leftAnimation {
+    margin-top: 2px;
+    margin-right: 2px;
+    border: 1px solid black;
+    height: 20px;
+    width: 20px;
+    float: right;
+}
+
 #openProjectList  .ui-selecting { background: #FECA40; }
 #openProjectList  .ui-selected { background: #F39814; color: white; }
 #openProjectList  { list-style-type: none; margin: 0; padding: 0; width: 60%; }
