--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ html, body {
     background-color: green;
 }
 
+#tree {
+    margin-top: 30px;
+}
+
 #openProjectList  .ui-selecting { background: #FECA40; }
 #openProjectList  .ui-selected { background: #F39814; color: white; }
 #openProjectList  { list-style-type: none; margin: 0; padding: 0; width: 60%; }
