--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,16 @@ html, body {
     background-color: green;
 }
 
+#footerAnimation {
+    margin-top: 2px;
+    margin-right: 2px;
+    border: 1px solid black;
+    height: 20px;
+    width: 100%;
+    z-index: 100;
+    background-color: green;
+}
+
 #tree {
     margin-top: 30px;
 }
