--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ html, body {
         width: 50px;
         float: left;
         border-right:1px solid black;
+        overflow:scroll;
 }
 
 #rechts {height: 100%;
