--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,17 @@ html, body {
     background-color: green;
 }
 
+#rightAnimation {
+    margin-top: 2px;
+    margin-right: 2px;
+    border: 1px solid black;
+    height: 20px;
+    width: 20px;
+    float: right;
+    z-index: 100;
+    background-color: green;
+}
+
 #footerAnimation {
     margin-top: 2px;
     margin-right: 2px;
