--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,11 @@ html, body {
 
 #rightAnimation {
     margin-top: 2px;
-    margin-right: 2px;
+    margin-left: 2px;
     border: 1px solid black;
     height: 20px;
     width: 20px;
-    float: right;
+    float: left;
     z-index: 100;
     background-color: green;
 }
